--- a/source/home.less
+++ b/source/home.less
@@ -443,7 +443,7 @@ form {
 
 // Map
 .map-wrapper {
-  margin: 10px 35px 30px 35px;
+  margin: 30px 35px 30px 35px;
   @media @medium {
     margin: 50px 35px 30px 35px;
   }
